Agregue solapa Admin y agregue titulo a botones

--- a/frontend/calendar.html
+++ b/frontend/calendar.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
     <title>Calendario</title>
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -24,6 +25,7 @@
                 <div class="agenda"><a href="agenda.html" title="Agenda">Agenda</a></div>
                 <div class="patients"><a href="patients.html" title="Pacientes">Pacientes</a></div>
                 <div class="professionals"><a href="professional.html" title="Profesionales">Profesionales</a></div>
+                <div class="admin"><a href="adminDashboard.html" title="Admin">Admin</a></div>
             </div>
             <div class="navbar-user">
                 <button id="btn-user" type="button" title="Usuario">
