--- a/frontend/adminDashboard.html
+++ b/frontend/adminDashboard.html
@@ -39,7 +39,7 @@
         <section class="user-form-section">
             <h2>Crear Usuario</h2>
             <form id="user-form">
-                <label for="name">Nombre:</label>
+                <label for="name">Usuario:</label>
                 <input type="text" id="name" name="name" title="Nombre de usuario" required>
                 <label for="password">Contraseña:</label>
                 <input type="password" id="password" name="password" title="Contraseña" required>
