--- a/frontend/patients.html
+++ b/frontend/patients.html
@@ -24,6 +24,7 @@
                 <div class="agenda"><a href="agenda.html" title="Agenda">Agenda</a></div>
                 <div class="patients"><a href="patients.html" title="Pacientes">Pacientes</a></div>
                 <div class="professionals"><a href="professional.html" title="Profesionales">Profesionales</a></div>
+                <div class="admin"><a href="adminDashboard.html" title="Admin">Admin</a></div>
             </div>
             <div class="navbar-user">
                 <button id="btn-user" type="button" title="Usuario">
