--- a/frontend/patients.html
+++ b/frontend/patients.html
@@ -27,9 +27,11 @@
                 <div class="admin"><a href="adminDashboard.html" title="Admin">Admin</a></div>
             </div>
             <div class="navbar-user">
-                <button id="btn-user" type="button" title="Usuario">
-                    <i class="bx bx-user-circle"></i> Usuario
-                </button>
+                <form action="user.html" style="display:inline;">
+                    <button id="btn-user" type="submit" title="Usuario">
+                      <i class="bx bx-user-circle"></i> Usuario
+                    </button>
+                  </form>                  
             </div>
         </nav>
     </header>
