--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
     </form>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="js/user.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
